servicebart.yaml
apiVersion: v1
kind: Service
metadata:
  name: bart-svc
  labels:
    app: bart
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: bart
