servicelisa.yaml
apiVersion: v1
kind: Service
metadata:
  name: lisa-svc
  labels:
    app: lisa
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: lisa
